[package]
name = "users"
description = "Library for getting information on Unix users and groups"

authors = [ "Benjamin Sago <ogham@bsago.me>" ]
documentation = "https://docs.rs/users/users/"
repository = "https://github.com/ogham/rust-users"
license = "MIT"
readme = "README.md"
version = "0.9.1"

[features]
default = ["cache", "mock"]
cache = []
mock = []

[dependencies]
libc = "0.2.50"
