[package]
name = "users"
description = "Library for getting information on Unix users and groups"

authors = [ "Benjamin Sago <ogham@bsago.me>" ]
documentation = "https://docs.rs/users/users/"
repository = "https://github.com/ogham/rust-users"
license = "MIT"
readme = "README.md"
version = "0.9.1"

[features]
default = ["cache", "mock", "logging"]
cache = []
mock = []
logging = ["log"]

[dependencies.libc]
version = "0.2.50"

[dependencies.log]
version = "0.4"
optional = true
default_features = false


[dev_dependencies.env_logger]
version = "0.7"
default_features = false
features = []
